crates/turborepo-cli/src/cli/snapshots/turborepo_cli__cli__test__turbo-watch-build---no-daemon.snap
---
source: crates/turborepo-cli/src/cli/test.rs
expression: err
---
error: unexpected argument '--no-daemon' found

  tip: a similar argument exists: '--no-update-notifier'

Usage: turbo watch [FLAGS]

For more information, try '--help'.
